Bug 439152 - Kwin 5.22.2 cannot be compiled against Mesa 18.3 anymore
Summary: Kwin 5.22.2 cannot be compiled against Mesa 18.3 anymore
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.22.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-25 13:38 UTC by Leszek Lesner
Modified: 2021-07-06 05:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leszek Lesner 2021-06-25 13:38:19 UTC
SUMMARY
Before commit 
https://invent.kde.org/plasma/kwin/-/commit/7a48ec6e66f080e8d53fbd63ffcfecd40ecf628c#7a9874a60b0fcdb7da55e6a4fa50bf28a6bc8cf2_154_157
it was possible to be compiled against Mesa 18.3. 
After the commit it is not possible anymore as the line mention above returns undefined. 

STEPS TO REPRODUCE
1. Compile Kwin with Mesa 18.3

OBSERVED RESULT
'gbm_format_name_desc' undefined

EXPECTED RESULT
compiles fine

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 5.22.2
(available in About System)
KDE Plasma Version: 5.22.2
KDE Frameworks Version: 5.83
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Reverting commit https://invent.kde.org/plasma/kwin/-/commit/7a48ec6e66f080e8d53fbd63ffcfecd40ecf628c#7a9874a60b0fcdb7da55e6a4fa50bf28a6bc8cf2
fixes the issue.
Comment 1 Bug Janitor Service 2021-06-25 14:30:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1134
Comment 2 Vlad Zahorodnii 2021-07-06 05:59:08 UTC
Git commit f657826541521bdde95ba39f865078d56d675181 by Vlad Zahorodnii.
Committed on 06/07/2021 at 05:58.
Pushed by vladz into branch 'Plasma/5.22'.

platforms/drm: Port away from gbm_format_get_name()

gbm_format_get_name() is available in Mesa 19 and later, but some
distros that ship Plasma 5.22 still have only Mesa 18.3.

M  +15   -6    src/plugins/platforms/drm/drm_buffer_gbm.cpp

https://invent.kde.org/plasma/kwin/commit/f657826541521bdde95ba39f865078d56d675181