platforms/drm: Port away from gbm_format_get_name()

gbm_format_get_name() is available in Mesa 19 and later, but some
distros that ship Plasma 5.22 still have only Mesa 18.3.

BUG: 439152